# comFE

./: .pre-commit-config.yaml  CITATION.cff  Cargo.toml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: main.yml
comfe_kill_me/: laws.py
py-comfe/: Cargo.toml  README.md  environment_develop.yml  pyproject.toml
py-comfe/python/comfe/: laws.py  rk.py
py-comfe/src/: gradient_jh2.rs  hypoelasticity.rs
py-comfe/test/: benchmark_elasticity.py  test_energy_conservation.py  test_jaumann_rate.py  test_jh2_2d.py
py-comfe/theory/: stress_rate.ipynb
py-comfe/theory/.ipynb_checkpoints/: stress_rate-checkpoint.ipynb
python/comfe/: __init__.py  cdm.py  helpers.py  laws.py  rk.py
python/pycomfe/: __init__.py  cdm.py  laws.py
src/: consts.rs  generic_jh2.rs  gradient_jh2.rs  hypoelasticity.rs  interfaces.rs  jh2.rs  jhr.rs  lib.rs  linear_elasticity.rs  mandel.rs  mises_plasticity.rs  smallstrain.rs  stress_strain.rs
src/smallstrain/: linear_elastic.rs
test/: benchmark_elasticity.py  rotation_stretch.py  test_jaumann_rate.py  test_jh2_2d.py  test_linear_elasticity.py  test_mpi_jh2.py  test_rotation_stretch.py
theory/: stress_rate.ipynb
